# argo-backend

./: .env.local  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-digitalocean.yml  docker-publish.yml
app/: config.py  dependencies.py  exceptions.py  main.py
app/models/: chat.py  rfp.py  vectordb.py
app/routers/: chat.py  embeddings.py  hello_world.py  rfp.py
app/schemas/: __init__.py  chat.py  embeddings.py  rfp.py
app/scripts/: chain.ipynb  pdf_to_pinecone.py
app/utils/: adobe.py  embeddings.py  langchain.py  openai.py  pinecone.py  security.py
scripts/: pdf_extract.py
test/: test_main.py
tests/: test_embeddings.py  test_main.py
